# Dyg-v2

./: CLAUDE.md  CMakeLists.txt  README.md  build.sh  build_with_shaders.sh  compile_shaders.sh  main.cpp  run.sh
Engine/Assets/Shaders/: particle.frag  particle.vert
Engine/Assets/Shaders/spirv/: particle.frag.spv
Engine/Core/: Application.cpp  Application.h  Timer.cpp  Timer.h
Engine/Procedural/: Chunk.cpp  Chunk.h  ProceduralGenerator.cpp  ProceduralGenerator.h  World.cpp  World.h
Engine/Rendering/: Renderer.cpp  Renderer.h  VulkanRenderer.cpp  VulkanRenderer.h
Engine/Simulation/: CellularAutomata.cpp  CellularAutomata.h  Material.cpp  Material.h  Particle.h
